retrieveUnpackaged/objects/Publication__c.object
<CustomObject>
    <fields>
        <fullName>ISBN_Number__c</fullName>
        <label>ISBN Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Url__c</fullName>
        <label>Image Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IMAGE(Image_Url__c , &apos;Image&apos;,50,50)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Info__c</fullName>
        <formula>Name+&quot;  &quot;+ Publisher_Name__c+&quot; ISBN:[&quot;+ ISBN_Number__c+&quot;]&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_Date__c</fullName>
        <label>Publication Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Publisher_Name__c</fullName>
        <label>Publisher Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Print Only</fullName>
                </value>
                <value>
                    <fullName>E-book Only</fullName>
                </value>
                <value>
                    <fullName>Print, E-book</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Publication</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Publications Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Publications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>